Add some CLI design features. Fix some bugs.